modificacion de scripts, creacion de pantallas solo front

--- a/python/Tesis_ModeloOCRA.ipynb
+++ b/python/Tesis_ModeloOCRA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 92,
       "metadata": {
         "id": "z4tbKmWW_-xO"
       },
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 93,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 94,
       "metadata": {
         "id": "sgfbq09AE0Gt"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 95,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 96,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,14 +89,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p).mp4\n"
+            "maquila012.mp4\n"
           ]
         }
       ],
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 98,
       "metadata": {
         "id": "4W3aozRXbO8v"
       },
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [
         {
@@ -190,7 +190,7 @@
               "'def analyze_videos_in_folder(video_folder, output_json_path):\\n    all_analysis_results = []\\n    \\n    for video_file in os.listdir(video_folder):\\n        if video_file.endswith((\\'.mp4\\', \\'.avi\\', \\'.mov\\')):\\n            video_path = os.path.join(video_folder, video_file)\\n            video_name = os.path.splitext(video_file)[0]\\n            \\n            keypoints_list = detect_keypoints(video_path)\\n            cap = cv2.VideoCapture(video_path)\\n            fps = int(cap.get(cv2.CAP_PROP_FPS))\\n            cap.release()\\n\\n            analysis_results = analyze_keypoints(keypoints_list, video_name, fps)\\n            all_analysis_results.extend(analysis_results)\\n            draw_keypoints_and_angles(video_path, analysis_results, output_folder, output_video_folder, json_folder)\\n    \\n    combined_json_path = os.path.join(json_folder, \\'Resultado_analisis_combinados.json\\')\\n    with open(output_json_path, \\'w\\') as json_file:\\n        json.dump(all_analysis_results, json_file, indent=4)\\n\\n    print(f\"Resultados del análisis exportados a: {output_json_path}\")\\n\\n# Ejemplo de uso:\\n#video_folder = \\'C:\\\\Tesis\\\\TestErgo\\\\muestra\\'\\nvideo_folder = video_dir #\\'C:\\\\Tesis\\\\TestErgo\\\\VIDEOS MAQUILAS\\'\\noutput_json_path = \\'C:\\\\Tesis\\\\TestErgo\\\\analisis_videos.json\\'\\n\\nanalyze_videos_in_folder(video_folder, output_json_path)'"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 100,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,11 +325,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 102,
       "metadata": {},
       "outputs": [],
       "source": [
         "def draw_keypoints_and_angles(video_path, output_folder, output_video_folder, json_folder):\n",
+        "\n",
         "    analysis_results, fps = analyze_keypoints(video_path)\n",
         "\n",
         "    cap = cv2.VideoCapture(video_path)\n",
@@ -414,7 +415,7 @@
         "                                (int(point[0] * frame.shape[1]) + 10, int(point[1] * frame.shape[0]) - 10),\n",
         "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 1, cv2.LINE_AA)\n",
         "\n",
-        "        # Guardar el frame en la carpeta de salida con el nombre del video seguido de su numeración\n",
+        "         #Guardar el frame en la carpeta de salida con el nombre del video seguido de su numeración\n",
         "        output_frame_path = os.path.join(video_frame_folder, f'{video_name}_frame_{frame_count:04d}.png')\n",
         "        cv2.imwrite(output_frame_path, frame)\n",
         "        frame_count += 1\n",
@@ -432,32 +433,33 @@
         "    print(f\"Frames exportados a: {video_frame_folder}\")\n",
         "    print(f\"Video exportado a: {output_video_path}\")\n",
         "    print(f\"JSON exportado a: {json_path}\")\n",
-        "    return video_frame_folder, output_video_path, json_path\n"
+        "    return video_frame_folder, output_video_path, json_path\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)\n",
-            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.mp4\n",
-            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json\n"
+            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\maquila012\n",
+            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\maquila012_20240805_130242.mp4\n",
+            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\maquila012_20240805_130242.json\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.mp4',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json')"
+              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\maquila012',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\maquila012_20240805_130242.mp4',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\maquila012_20240805_130242.json')"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 103,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -473,15 +475,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 104,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Archivo JSON más reciente: C:/Tesis/TestErgo/archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json\n",
-            "Video más reciente: C:/Tesis/TestErgo/videoMarcado\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.mp4\n",
+            "Archivo JSON más reciente: C:/Tesis/TestErgo/archivos_json\\maquila012_20240805_130242.json\n",
+            "Video más reciente: C:/Tesis/TestErgo/videoMarcado\\maquila012_20240805_130242.mp4\n",
             "El JSON se ha actualizado con TNTR y TNC.\n"
           ]
         }
@@ -553,10 +555,10 @@
         "# Extraer datos del video\n",
         "duration_total = get_duration_from_video(video_path)\n",
         "video_data = {\n",
-        "    'activities': [{'duration': 480, 'is_repetitive': True}],  # Ejemplo de datos, reemplazar con tu análisis real\n",
-        "    'breaks': [{'duration': 60}],  # Ejemplo de datos\n",
+        "    'activities': [{'duration': 300, 'is_repetitive': True}],  # Ejemplo de datos, reemplazar con tu análisis real\n",
+        "    'breaks': [{'duration': 15}],  # Ejemplo de datos\n",
         "    'rests': [{'duration': 60}],  # Ejemplo de datos\n",
-        "    'cycles_count': 9000  # este campo quedará fijo con 9000 ciclos\n",
+        "    'cycles_count': 3000  # este campo quedará fijo con 9000 ciclos\n",
         "}\n",
         "\n",
         "# Calcular TNTR y TNC\n",
@@ -621,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 105,
       "metadata": {},
       "outputs": [
         {
@@ -629,7 +631,7 @@
           "output_type": "stream",
           "text": [
             "Formato de tiempo: 'Xh Ym', 'Xh' o 'Ym' (ejemplo: '8h 30m', '1h', '45m')\n",
-            "El JSON se ha actualizado con el Factor de Recuperación y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
+            "El JSON se ha actualizado con el Factor de Recuperación y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila012_20240805_130242.json.\n"
           ]
         }
       ],
@@ -692,10 +694,10 @@
         "num_pauses = int(input(\"Ingrese el número total de pausas: \"))\n",
         "pauses = [] \"\"\"\n",
         "# Datos de prueba\n",
-        "pauses = []  # Pausas en minutos\n",
-        "lunch_break_duration = 60  # Tiempo de almuerzo en minutos\n",
-        "shift_duration = 480  # Duración del turno en minutos\n",
-        "num_pauses = 3\n",
+        "pauses = [10]  # Pausas en minutos\n",
+        "lunch_break_duration = 8  # Tiempo de almuerzo en minutos\n",
+        "shift_duration = 60  # Duración del turno en minutos\n",
+        "num_pauses = 1\n",
         "\n",
         "\"\"\" for i in range(num_pauses):\n",
         "    pause_duration_str = get_input(f\"Ingrese la duración de la pausa {i+1} (en horas y/o minutos): \")\n",
@@ -754,14 +756,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 106,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Frecuencia y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
+            "El JSON se ha actualizado con el Factor de Frecuencia y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila012_20240805_130242.json.\n"
           ]
         }
       ],
@@ -830,7 +832,7 @@
         "\n",
         "# Definir valores predeterminados para ATD y ATE\n",
         "valor_atd = 0.0  # Valor fijo de ejemplo para Acciones Técnicas Dinámicas   \n",
-        "valor_ate = 0.0  # Valor fijo de ejemplo para Acciones Técnicas Estáticas\n",
+        "valor_ate = 2.5 # Valor fijo de ejemplo para Acciones Técnicas Estáticas\n",
         "\n",
         "# Intentar extraer puntuaciones del JSON, sino usar valores predeterminados\n",
         "atd = data.get('AccionesTecnicasDinámicas', valor_atd)\n",
@@ -864,7 +866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 107,
       "metadata": {},
       "outputs": [
         {
@@ -872,7 +874,7 @@
           "output_type": "stream",
           "text": [
             "No se encontraron acciones de fuerza en el archivo JSON. Usando valores predeterminados.\n",
-            "El JSON se ha actualizado con el Factor de Fuerza y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
+            "El JSON se ha actualizado con el Factor de Fuerza y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila012_20240805_130242.json.\n"
           ]
         }
       ],
@@ -988,14 +990,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 108,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Posturas y Movimientos y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
+            "El JSON se ha actualizado con el Factor de Posturas y Movimientos y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila012_20240805_130242.json.\n"
           ]
         }
       ],
@@ -1028,11 +1030,20 @@
         "    pm = get_posture_score(json_data.get('angulo_de_muneca_izquierda', 0))\n",
         "    pa = get_posture_score(json_data.get('angulo_mano_izquierdo', 0))\n",
         "\n",
+        "    # Obtener las puntuaciones individuales basadas en los ángulos del lado derecho\n",
+        "    ph_r = get_posture_score(json_data.get('angulo_hombro_derecho', 0))\n",
+        "    pc_r = get_posture_score(json_data.get('angulo_codo_derecho', 0))\n",
+        "    pm_r = get_posture_score(json_data.get('angulo_de_muneca_derecha', 0))\n",
+        "    pa_r = get_posture_score(json_data.get('angulo_mano_derecho', 0))\n",
+        "\n",
         "    # Obtener la puntuación para movimientos estereotipados (asumimos que es un campo existente)\n",
         "    pes = json_data.get('MovimientosEstereotipados', 0)\n",
         "\n",
         "    # Calcular FP\n",
-        "    fp = max(ph, pc, pm, pa) + pes\n",
+        "    #fp = max(ph, pc, pm, pa) + pes\n",
+        "\n",
+        "    # Calcular FP tomando el máximo entre todos los ángulos del lado izquierdo y derecho\n",
+        "    fp = max(ph, pc, pm, pa, ph_r, pc_r, pm_r, pa_r) + pes\n",
         "\n",
         "    return fp\n",
         "def get_most_recent_file(folder_path, extension):\n",
@@ -1081,14 +1092,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Riesgos Adicionales (FC) y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
+            "El JSON se ha actualizado con el Factor de Riesgos Adicionales (FC) y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila012_20240805_130242.json.\n"
           ]
         }
       ],
@@ -1103,9 +1114,11 @@
         "    # Ejemplo: Puedes tener varios campos que influyen en el FC\n",
         "    riesgo_adicional_1 = json_data.get('RiesgoAdicional1', 2)\n",
         "    riesgo_adicional_2 = json_data.get('RiesgoAdicional2', 1)\n",
+        "    #riesgo_adicional_3 = json_data.get('RiesgoAdicional2', 2)\n",
         "    \n",
         "    # Ejemplo de fórmula para el FC\n",
-        "    fc = riesgo_adicional_1 * 0.2 + riesgo_adicional_2 * 0.2\n",
+        "    fc = riesgo_adicional_1 * 0.2 + riesgo_adicional_2 * 0.2 #+ riesgo_adicional_3 * 0.4\n",
+        "\n",
         "    \n",
         "    return fc\n",
         "\n",
@@ -1155,14 +1168,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Multiplicador de Duración y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
+            "El JSON se ha actualizado con el Multiplicador de Duración y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila012_20240805_130242.json.\n"
           ]
         }
       ],
@@ -1272,14 +1285,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El Excel se ha creado y guardado en static\\resultados\\analisisOcra_Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092224.xlsx.\n"
+            "El Excel se ha creado y guardado en static\\resultados\\analisisOcra_maquila012_20240805_130440.xlsx.\n"
           ]
         }
       ],
